2005-04-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl: Initial bare translations by Tineke <tdm@dds.nl>.  Not for
	publication, Tineke wants to do proofreading corrections first.

2005-04-20  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/index.html: add official debian package for
	2.4.5. remove kroger's package for 2.4.* series. comment Wagner's
	package for 2.4.2 (website is down).

2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/packaging.html: scratch mentioning Fedora. Other
	distros go into their own sections.

	* site/install/index.html (href): update to .20

	* site/news.ihtml (NOTE): announce 2.5.20

2005-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (WEBSERVER): That's now lilypond.org.

	* site/devel/packaging.html: Update package dependencies.  Add yum
	for Fedora.

2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html: 9 years ago already.

	* site/install/macos.html (href): link to Libero Mureddu's
	tutorial.

2005-04-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/contact.ihtml: Add translation header with revision marker.

2005-04-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: add 2.4.6

2005-04-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/older-versions.html: remove versions no longer
	available.

2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/older-versions.html: remove 1.8 RH9 lilypond.org
	and ccrma links

2005-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_ihtml): Do first.  Fixes @DOC@
	links in contact.ihtml.

2005-04-06  Jan Nieuwenhuizen  <jan.nieuwenhuizen@aspiratie.nl>

	* site/about/automated-engraving/schubert.html (href): Fix link.

2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Name 2.2 old, 2.0 ancient.

2005-04-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/documentation.html: idem.

	* site/about/index.html: use contact.ihtml
